# OMFMISimulator-testsuite

./: .gitignore  Makefile  rtest  rtestLua  rtestRoot
FMUs/: BouncingBall.mos  HelloWorld.mos  Lin2DimODE.mos  Makefile  adder1.mos  cs_BouncingBall.fmu  cs_HelloWorld.fmu  cs_Lin2DimODE.fmu  cs_adder1.fmu  cs_parameterTest.fmu  cs_source1.fmu  cs_test1.fmu  me_BouncingBall.fmu  me_HelloWorld.fmu  me_Lin2DimODE.fmu  me_adder1.fmu  me_parameterTest.fmu  me_source1.fmu  me_test1.fmu  parameterTest.mos  source1.mos  test1.mos
OMFitLib/: CMakeLists.txt  README.md  runRoot.sh  test_cs_HelloWorld_Fit.c  test_cs_Lin2DimODE_Fit.cpp
OMFitLua/: Makefile  README.md  cs_HelloWorld_Fit.lua
OMSimulator/: Makefile  cs_BouncingBall.mos  cs_test1.mos  me_BouncingBall.mos  me_test1.mos
OMSimulatorLua/: .gitignore  ConnectedFmu.xml  ImportExport.lua  Importxml.lua  Makefile  cs_BouncingBall.lua  cs_HelloWorld_Reset.lua  cs_test1.lua  me_BouncingBall.lua  me_HelloWorld_Reset.lua  me_test1.lua  test2.lua  test3.lua
OMSimulatorModelica/: Makefile  cs_BouncingBall.mos
OMSimulatorRoot/: Makefile  README.md  runRoot.sh  test_cs_BouncingBall.C
cs/: BouncingBall.fmu  BouncingBall.mos  BouncingBall_res.csv  Makefile  test1.mos  test1_res.mat
lua/: Makefile  cs_test1.lua
me/: BouncingBall.mos  Makefile  test1.mos
me/ReferenceFiles/: BouncingBall_res.csv
paramest/: CMakeLists.txt  Makefile  README.MD  exampleErrorGraph.C  exampleRootCeresHelloWorld.C  runRoot.sh  test_ceres_cfunc_HelloWorld.C  test_ceres_cs_HelloWorld.C  test_cfunc_HelloWorld.C  test_cs_HelloWorld.C  test_cs_HelloWorld2.C  test_cs_HelloWorld_withoutReset_SLOW.C  test_simbin_HelloWorld.C
paramest/models/: HelloWorld.mo  HelloWorld.mos  Makefile
simunits/: CMakeLists.txt  README.MD  numbers.cpp  test_ADT.cpp  test_core.cpp.DEACTIVATE  test_mach7.cpp  test_port.cpp  test_port2.cpp  test_simunits.cpp  test_simunits3.cpp.DEACTIVATE  test_simunits_composite.cpp  test_simunits_factory.cpp  test_simunits_fmi20.cpp  test_simunits_fmi20DEPRECATED.cpp  test_simunits_fmi20me.cpp  test_simunits_fmi20system.cpp  test_simunits_system.cpp  test_simunits_systemDEPRECATED.cpp  test_smart  test_smart.cpp
